--- a/portfolio-details-outbreak.html
+++ b/portfolio-details-outbreak.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Combo Swipe</title>
+  <title>Outbreak: Source</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
@@ -46,25 +46,25 @@
         <div class="row">
 
           <div class="col-lg-8">
-            <h2 class="portfolio-title">Combo Swipe (WIP)</h2>
+            <h2 class="portfolio-title">Outbreak: Source</h2>
             <div class="owl-carousel portfolio-details-carousel">
-              <img src="assets/img/portfolio/portfolio-details-1.jpg" class="img-fluid" alt="">
-              <!-- <img src="assets/img/portfolio/portfolio-details-2.jpg" class="img-fluid" alt="">
-              <img src="assets/img/portfolio/portfolio-details-3.jpg" class="img-fluid" alt=""> -->
+              <img src="assets/img/portfolio/outbreaklogin.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/outbreakshop.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/outbreakwalls.png" class="img-fluid" alt="">
             </div>
           </div>
 
           <div class="col-lg-4 portfolio-info">
             <h3>Project information</h3>
             <ul>
-              <li><strong>Category</strong>: Mobile Game</li>
-              <li><strong>Purpose</strong>: Personal Project</li>
+              <li><strong>Category</strong>: Web Game</li>
+              <li><strong>Purpose</strong>: BCIT Agile Methodology Course</li>
               <li><strong>Project date</strong>: May 2020</li>
-              <li><strong>Project URL</strong>: <a href="#">NA</a></li>
+              <li><strong>Project URL</strong>: <a href="http://outbreaksource.herokuapp.com/page-login">outbreaksource.herokuapp.com</a></li>
             </ul>
 
             <p>
-              An endless 2D mobile RPG game. Swipe against endless enemies while empowering your stats and combos! Do you have what it takes to survive?
+              An idle browser game, setting you as a bitcoin hacker using the Outbreak: Source OS. Hack as many firewalls as you can to gain bitcoins for your own benefit!
             </p>
           </div>
 
