--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Personal Bootstrap Template</title>
+  <title>Jaguar Perlas</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <!-- the image beside the tab -->
+  <link href="#" rel="icon">
+  <link href="#" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -58,11 +59,11 @@
       </nav><!-- .nav-menu -->
 
       <div class="social-links">
-        <a href="#" class="twitter"><i class="icofont-twitter"></i></a>
-        <a href="#" class="facebook"><i class="icofont-facebook"></i></a>
-        <a href="#" class="instagram"><i class="icofont-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="icofont-skype"></i></a>
-        <a href="#" class="linkedin"><i class="icofont-linkedin"></i></a>
+        <!-- <a href="#" class="twitter"><i class="icofont-twitter"></i></a> -->
+        <a href="https://www.facebook.com/jaguarawrr" class="facebook"><i class="icofont-facebook"></i></a>
+        <a href="https://www.instagram.com/jaguarawr/" class="instagram"><i class="icofont-instagram"></i></a>
+        <!-- <a href="#" class="google-plus"><i class="icofont-skype"></i></a> -->
+        <a href="https://www.linkedin.com/in/jaguar-perlas/" class="linkedin"><i class="icofont-linkedin"></i></a>
       </div>
 
     </div>
@@ -72,7 +73,7 @@
   <section id="about" class="about">
 
     <!-- ======= About Me ======= -->
-    <div class="about-me container">
+    <!-- <div class="about-me container">
 
       <div class="section-title">
         <h2>About</h2>
@@ -114,10 +115,10 @@
         </div>
       </div>
 
-    </div><!-- End About Me -->
+    </div>End About Me -->
 
     <!-- ======= Counts ======= -->
-    <div class="counts container">
+    <!-- <div class="counts container">
 
       <div class="row">
 
@@ -155,10 +156,10 @@
 
       </div>
 
-    </div><!-- End Counts -->
+    </div>End Counts -->
 
     <!-- ======= Skills  ======= -->
-    <div class="skills container">
+    <!-- <div class="skills container">
 
       <div class="section-title">
         <h2>Skills</h2>
@@ -218,10 +219,10 @@
 
       </div>
 
-    </div><!-- End Skills -->
+    </div>End Skills -->
 
     <!-- ======= Interests ======= -->
-    <div class="interests container">
+    <!-- <div class="interests container">
 
       <div class="section-title">
         <h2>Interests</h2>
@@ -302,10 +303,10 @@
         </div>
       </div>
 
-    </div><!-- End Interests -->
+    </div>End Interests -->
 
     <!-- ======= Testimonials ======= -->
-    <div class="testimonials container">
+    <!-- <div class="testimonials container">
 
       <div class="section-title">
         <h2>Testimonials</h2>
@@ -370,9 +371,9 @@
 
       </div>
 
-    </div><!-- End Testimonials  -->
+    </div><End Testimonials  -->
 
-  </section><!-- End About Section -->
+  </section>
 
   <!-- ======= Resume Section ======= -->
   <section id="resume" class="resume">
@@ -381,62 +382,90 @@
       <div class="section-title">
         <h2>Resume</h2>
         <p>Check My Resume</p>
+        <p><a href="https://drive.google.com/file/d/1S8mpZKN_zRGHKD_I3QfyurG4_Jqa-7aA/view?usp=sharing">PDF</a></p>
       </div>
 
       <div class="row">
         <div class="col-lg-6">
-          <h3 class="resume-title">Sumary</h3>
+          <h3 class="resume-title">Profile</h3>
           <div class="resume-item pb-0">
-            <h4>Alice Barkley</h4>
-            <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
+            <h4>Jaguar Perlas</h4>
+            <p><em>BCIT Computer Information Technology student who takes initiative and has high standards in his own work and in group work. Brings 3 years of leadership and communication through school clubs and teaching. Demonstrated critical analysis through version control, manual and automatic testing, and reviewing peer work before Git pushes. </em></p>
             <p>
             <ul>
-              <li>Portland par 127,Orlando, FL</li>
-              <li>(123) 456-7891</li>
-              <li>alice.barkley@example.com</li>
+              <li>(778) 989-6449</li>
+              <li>jagperlas@gmail.com</li>
+              <li>linkedin.com/in/jaguar-perlas</li>
             </ul>
             </p>
           </div>
 
+          <h3 class="resume-title">Personal Projects</h3>
+          <div class="resume-item">
+            <h4>Combo Swipe</h4>
+            <h5>May 2020 - Present</h5>
+            <!-- <p><em>British Columbia Institute of Technology</em></p> -->
+            <p>stuff about that game lol</p>
+          </div>
+
           <h3 class="resume-title">Education</h3>
           <div class="resume-item">
-            <h4>Master of Fine Arts &amp; Graphic Design</h4>
-            <h5>2015 - 2016</h5>
-            <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-            <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+            <h4>Computer Information Technology Diploma</h4>
+            <h5>2019 - Present</h5>
+            <p><em>British Columbia Institute of Technology</em></p>
+            <p>GPA 86%</p>
           </div>
-          <div class="resume-item">
-            <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-            <h5>2010 - 2014</h5>
-            <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-            <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
-          </div>
+
         </div>
         <div class="col-lg-6">
-          <h3 class="resume-title">Professional Experience</h3>
+          <h3 class="resume-title">Academic Projects</h3>
           <div class="resume-item">
-            <h4>Senior graphic design specialist</h4>
-            <h5>2019 - Present</h5>
-            <p><em>Experion, New York, NY </em></p>
+            <h4>Outbreak: Source || Lead Developer</h4>
+            <h5>May 2020</h5>
+            <p><em>BCIT Agile Methodology Course </em></p>
             <p>
             <ul>
-              <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-              <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-              <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-              <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+              <li>i made a game using agile methodology</li>
             </ul>
             </p>
           </div>
           <div class="resume-item">
-            <h4>Graphic design specialist</h4>
-            <h5>2017 - 2018</h5>
-            <p><em>Stepping Stone Advertising, New York, NY</em></p>
+            <h4>HallPass || Lead Designer</h4>
+            <h5>May 2020</h5>
+            <p><em>BCIT UX/UI Design Course</em></p>
             <p>
             <ul>
-              <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-              <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-              <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-              <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+              <li>i designed an app</li>
+            </ul>
+            </p>
+          </div>
+          <div class="resume-item">
+            <h4>Python MP3 Player || Lead Developer</h4>
+            <h5>Mar - Apr 2020</h5>
+            <p><em>BCIT Object-Oriented Programming Course</em></p>
+            <p>
+            <ul>
+              <li>i coded an mp3 player using python</li>
+            </ul>
+            </p>
+          </div>
+          <div class="resume-item">
+            <h4>Router Project</h4>
+            <h5>Feb - Apr 2020</h5>
+            <p><em>BCIT Networking Course</em></p>
+            <p>
+            <ul>
+              <li>i made a router</li>
+            </ul>
+            </p>
+          </div>
+          <div class="resume-item">
+            <h4>Food Ordering Website</h4>
+            <h5>Feb - Mar 2020</h5>
+            <p><em>BCIT Web Applications Course</em></p>
+            <p>
+            <ul>
+              <li>i made a food ordering website</li>
             </ul>
             </p>
           </div>
@@ -448,7 +477,7 @@
 
   <!-- ======= Services Section ======= -->
   <section id="services" class="services">
-    <div class="container">
+    <!-- <div class="container">
 
       <div class="section-title">
         <h2>Services</h2>
@@ -506,7 +535,7 @@
 
       </div>
 
-    </div>
+    </div> -->
   </section><!-- End Services Section -->
 
   <!-- ======= Portfolio Section ======= -->
@@ -514,17 +543,17 @@
     <div class="container">
 
       <div class="section-title">
-        <h2>Portfolio</h2>
-        <p>My Works</p>
+        <h2>Works and Projects</h2>
+        <p>My Projects</p>
       </div>
 
       <div class="row">
         <div class="col-lg-12 d-flex justify-content-center">
           <ul id="portfolio-flters">
             <li data-filter="*" class="filter-active">All</li>
-            <li data-filter=".filter-app">App</li>
+            <!-- <li data-filter=".filter-app">App</li>
             <li data-filter=".filter-card">Card</li>
-            <li data-filter=".filter-web">Web</li>
+            <li data-filter=".filter-web">Web</li> -->
           </ul>
         </div>
       </div>
@@ -533,12 +562,12 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/mobilegame.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>App 1</h4>
-              <p>App</p>
+              <h4>Combo Swipe</h4>
+              <p>Mobile Game</p>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-1.jpg" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/mobilegame.png" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -547,19 +576,19 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/outbreak.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Web 3</h4>
-              <p>Web</p>
+              <h4>Outbreak: Source</h4>
+              <p>Idle Web Game</p>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-2.jpg" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/outbreak.png" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
+                <a href="portfolio-details-outbreak.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+        <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-app">
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
@@ -655,7 +684,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
 
       </div>
 
