--- a/index.html
+++ b/index.html
@@ -11,8 +11,6 @@
 
   <!-- Favicons -->
   <!-- the image beside the tab -->
-  <link href="#" rel="icon">
-  <link href="#" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -28,12 +26,6 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: Personal - v2.3.0
-  * Template URL: https://bootstrapmade.com/personal-free-resume-bootstrap-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
@@ -64,6 +56,7 @@
         <a href="https://www.instagram.com/jaguarawr/" class="instagram"><i class="icofont-instagram"></i></a>
         <!-- <a href="#" class="google-plus"><i class="icofont-skype"></i></a> -->
         <a href="https://www.linkedin.com/in/jaguar-perlas/" class="linkedin"><i class="icofont-linkedin"></i></a>
+        <a href="https://github.com/jperlas2019" class="github"><i class="icofont-github"></i></a>
       </div>
 
     </div>
@@ -382,7 +375,7 @@
       <div class="section-title">
         <h2>Resume</h2>
         <p>Check My Resume</p>
-        <p><a href="https://drive.google.com/file/d/1S8mpZKN_zRGHKD_I3QfyurG4_Jqa-7aA/view?usp=sharing">PDF</a></p>
+        <p><a href="https://drive.google.com/file/d/1S8mpZKN_zRGHKD_I3QfyurG4_Jqa-7aA/view?usp=sharing">Full PDF</a></p>
       </div>
 
       <div class="row">
@@ -390,22 +383,16 @@
           <h3 class="resume-title">Profile</h3>
           <div class="resume-item pb-0">
             <h4>Jaguar Perlas</h4>
-            <p><em>BCIT Computer Information Technology student who takes initiative and has high standards in his own work and in group work. Brings 3 years of leadership and communication through school clubs and teaching. Demonstrated critical analysis through version control, manual and automatic testing, and reviewing peer work before Git pushes. </em></p>
-            <p>
             <ul>
-              <li>(778) 989-6449</li>
-              <li>jagperlas@gmail.com</li>
-              <li>linkedin.com/in/jaguar-perlas</li>
+              <p><em>BCIT Computer Information Technology student who takes initiative and has high standards in his own work and in group work. Brings 3 years of leadership and communication through school clubs and teaching. Demonstrated critical analysis through version control, manual and automatic testing, and reviewing peer work before Git pushes. </em></p>
+              <p>
+              <ul>
+                <li>(778) 989-6449</li>
+                <li>jagperlas@gmail.com</li>
+                <li>linkedin.com/in/jaguar-perlas</li>
+              </ul>
+              </p>
             </ul>
-            </p>
-          </div>
-
-          <h3 class="resume-title">Personal Projects</h3>
-          <div class="resume-item">
-            <h4>Combo Swipe</h4>
-            <h5>May 2020 - Present</h5>
-            <!-- <p><em>British Columbia Institute of Technology</em></p> -->
-            <p>stuff about that game lol</p>
           </div>
 
           <h3 class="resume-title">Education</h3>
@@ -413,11 +400,46 @@
             <h4>Computer Information Technology Diploma</h4>
             <h5>2019 - Present</h5>
             <p><em>British Columbia Institute of Technology</em></p>
-            <p>GPA 86%</p>
+            <ul>
+              <p>GPA 86%</p>
+            </ul>
+          </div>
+
+          <h3 class="resume-title">Experience</h3>
+          <div class="resume-item">
+            <h4>Beginner Jazz Band Student Teacher</h4>
+            <h5>Sept 2017 - June 2019</h5>
+            <p><em>Holy Cross Regional High School</em></p>
+            <ul>
+              <p>Taught a beginner jazz band consisting of 16 students from grades 8 - 10</p>
+            </ul>
+          </div>
+
+          <div class="resume-item">
+            <h4>Rides Operator</h4>
+            <h5>June 2017 - Sept 2018</h5>
+            <p><em>Pacific National Exhibition (PNE)</em></p>
+            <ul>
+              <p>Loaded, unloaded, and maintained a roller coaster for over 100 guests for 5 days a week</p>
+              <p>Documented maintenance periods and problems with the train to predict future problems</p>
+          </ul>
           </div>
 
         </div>
         <div class="col-lg-6">
+          <h3 class="resume-title">Personal Projects</h3>
+          <div class="resume-item">
+            <h4>Combo Swipe</h4>
+            <h5>May 2020 - Present</h5>
+            <ul>
+              <p>An Endless 2d RPG mobile game featuring countless enemies, stats, pixelart, and a unique combat system. </p>
+              <p><i>Worked on: Everything except environment art and music</i></p>
+              <p><i>Made with: Unity, C#, Adobe Illustrator</i></p>
+              <a href="https://github.com/jperlas2019/unity-mobile-game">Github link</a>
+            </ul>
+
+          </div>
+
           <h3 class="resume-title">Academic Projects</h3>
           <div class="resume-item">
             <h4>Outbreak: Source || Lead Developer</h4>
@@ -425,7 +447,10 @@
             <p><em>BCIT Agile Methodology Course </em></p>
             <p>
             <ul>
-              <li>i made a game using agile methodology</li>
+              <p>An API heavy idle-game on the browser. You are a black-hat hacker, gaining bitcoins from hacking firewalls.</p>
+              <p><i>Worked on: Backend, database, core mechanics</i></p>
+              <p><i>Made with: MongoDB, Express.Js, Angular, Node.Js, Github</i></p>
+              <a href="https://github.com/jperlas2019/Outbreak-Source">Github link</a>
             </ul>
             </p>
           </div>
@@ -435,17 +460,23 @@
             <p><em>BCIT UX/UI Design Course</em></p>
             <p>
             <ul>
-              <li>i designed an app</li>
+              <p>A design concept for a universal school application that would link to schools' online services and display information in a familiar user interface.</p>
+              <p><i>Worked on: Template, interactions, most screens.</i></p>
+              <p><i>Made with: Figma</i></p>
+              <a href="https://www.figma.com/proto/RJ5UcWjVAWLi2b6fQDyxfB/User-Flows?node-id=6%3A192&scaling=min-zoom">See the design</a>
             </ul>
             </p>
           </div>
           <div class="resume-item">
             <h4>Python MP3 Player || Lead Developer</h4>
             <h5>Mar - Apr 2020</h5>
-            <p><em>BCIT Object-Oriented Programming Course</em></p>
+            <p><i>BCIT Object-Oriented Programming Course</i></p>
             <p>
             <ul>
-              <li>i coded an mp3 player using python</li>
+              <p>A simple MP3 player that plays MP3 files from your hard drive as well as gathering meta-data from those files.</p>
+              <p><i>Worked on: Database, API, some Tkinter</i></p>
+              <p><i>Made with: Python, SQLite, VLC, Tkinter, Github, Postman, eyeD3 Module</i></p>
+              <a href="https://github.com/jperlas2019/Python-MP3-Player">Github link</a>
             </ul>
             </p>
           </div>
@@ -455,7 +486,8 @@
             <p><em>BCIT Networking Course</em></p>
             <p>
             <ul>
-              <li>i made a router</li>
+              <p>A network containing 4 nodes and 3 routers that includes DHCP, NAT, and packet filtering using nftables</p>
+              <p><i>Made with: CentOS, Red Hat</i></p>
             </ul>
             </p>
           </div>
@@ -465,10 +497,12 @@
             <p><em>BCIT Web Applications Course</em></p>
             <p>
             <ul>
-              <li>i made a food ordering website</li>
+              <p>A simple food ordering website demonstrating MEAN stack, bootstrap, and user privleges.</p>
+              <p><i>Made with: MongoDB, Angular, Node.Js, Express.Js</i></p>
             </ul>
             </p>
           </div>
+          
         </div>
       </div>
 
@@ -693,7 +727,7 @@
 
   <!-- ======= Contact Section ======= -->
   <section id="contact" class="contact">
-    <div class="container">
+    <!-- <div class="container">
 
       <div class="section-title">
         <h2>Contact</h2>
@@ -767,7 +801,7 @@
         <div class="text-center"><button type="submit">Send Message</button></div>
       </form>
 
-    </div>
+    </div> -->
   </section><!-- End Contact Section -->
 
 
