--- a/portfolio-details-outbreak.html
+++ b/portfolio-details-outbreak.html
@@ -10,8 +10,6 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="#" rel="icon">
-  <link href="#" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -27,12 +25,6 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: Personal - v2.3.0
-  * Template URL: https://bootstrapmade.com/personal-free-resume-bootstrap-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
@@ -66,6 +58,14 @@
             <p>
               An idle browser game, setting you as a bitcoin hacker using the Outbreak: Source OS. Hack as many firewalls as you can to gain bitcoins for your own benefit!
             </p>
+            FEATURES:
+            <ul>
+              <li>•	Automatic bitcoin gain, even offline!</li>
+              <li>•	An item shop to empower your hacks</li>
+              <li>•	A prestige system to reset your game for more power!</li>
+              <li>•	A login system to save your progress</li>
+              <li>•	A terminal to type in commands</li>
+            </ul>
           </div>
 
         </div>
