--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -10,8 +10,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="#" rel="icon">
-  <link href="#" rel="apple-touch-icon">
+
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -66,6 +65,13 @@
             <p>
               An endless 2D mobile RPG game. Swipe against endless enemies while empowering your stats and combos! Do you have what it takes to survive?
             </p>
+            FEATURES:
+            <ul>
+              <li>•	Randomized combo patterns to attack</li>
+              <li>•	A magic system to cast spells</li>
+              <li>•	Endless scalable enemies. Beat your highscore!</li>
+              <li>•	A gaming experience on mobile</li>
+            </ul>
           </div>
 
         </div>
