More portfolios, updated resume, videos when portfolio detail

--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
       <div class="section-title">
         <h2>Resume</h2>
         <p>Check My Resume</p>
-        <p><a href="https://drive.google.com/file/d/1IeqXk2sWZ6oYUk3WrwgANVv8Z5hNsqFK/view?usp=sharing">Full PDF</a></p>
+        <p><a href="https://drive.google.com/file/d/1IeqXk2sWZ6oYUk3WrwgANVv8Z5hNsqFK/view?usp=sharing">Full PDF HERE</a></p>
       </div>
 
       <div class="row">
@@ -617,6 +617,48 @@
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/outbreak.png" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details-outbreak.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/hallpass.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>HallPass</h4>
+              <p>UX/UI Design</p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/hallpassvert.jpg" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
+                <a href="portfolio-details-hallpass.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/pythonmp3.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Simple Python MP3 Player</h4>
+              <p>Python Application</p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/pythonmp3.png" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
+                <a href="portfolio-details-pythonmp3.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/router2.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Router Project</h4>
+              <p>Networking</p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/router2.png" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
+                <a href="portfolio-details-router.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
