--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -47,7 +47,10 @@
           <div class="col-lg-8">
             <h2 class="portfolio-title">Combo Swipe (WIP)</h2>
             <div class="owl-carousel portfolio-details-carousel">
-              <img src="assets/img/portfolio/portfolio-details-1.jpg" class="img-fluid" alt="">
+              <video width="100%" autoplay loop>
+                <source src="assets/img/portfolio/comboswipe.mp4" type="video/mp4">
+              </video>
+              <!-- <img src="assets/img/portfolio/portfolio-details-1.jpg" class="img-fluid" alt=""> -->
               <!-- <img src="assets/img/portfolio/portfolio-details-2.jpg" class="img-fluid" alt="">
               <img src="assets/img/portfolio/portfolio-details-3.jpg" class="img-fluid" alt=""> -->
             </div>
@@ -59,7 +62,7 @@
               <li><strong>Category</strong>: Mobile Game</li>
               <li><strong>Purpose</strong>: Personal Project</li>
               <li><strong>Project date</strong>: May 2020</li>
-              <li><strong>Project URL</strong>: <a href="#">NA</a></li>
+              <li><strong>Project URL</strong>: <a href="#">N/A</a></li>
             </ul>
 
             <p>
