--- a/portfolio-details-outbreak.html
+++ b/portfolio-details-outbreak.html
@@ -40,9 +40,9 @@
           <div class="col-lg-8">
             <h2 class="portfolio-title">Outbreak: Source</h2>
             <div class="owl-carousel portfolio-details-carousel">
-              <img src="assets/img/portfolio/outbreaklogin.png" class="img-fluid" alt="">
-              <img src="assets/img/portfolio/outbreakshop.png" class="img-fluid" alt="">
-              <img src="assets/img/portfolio/outbreakwalls.png" class="img-fluid" alt="">
+              <video width="100%" autoplay loop>
+                <source src="assets/img/portfolio/outbreak1.mp4" type="video/mp4">
+              </video>
             </div>
           </div>
 
@@ -52,7 +52,7 @@
               <li><strong>Category</strong>: Web Game</li>
               <li><strong>Purpose</strong>: BCIT Agile Methodology Course</li>
               <li><strong>Project date</strong>: May 2020</li>
-              <li><strong>Project URL</strong>: <a href="http://outbreaksource.herokuapp.com/page-login">outbreaksource.herokuapp.com</a></li>
+              <li><strong>Project URL</strong>: <a href="http://outbreaksource.herokuapp.com">outbreaksource.herokuapp.com</a></li>
             </ul>
 
             <p>
