Changed the "About" in resume

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <div class="resume-item pb-0">
             <h4>Jaguar Perlas</h4>
             <ul>
-              <p><em>BCIT Computer Information Technology student who takes initiative and has high standards in his own work and in group work. Brings 3 years of leadership and communication through school clubs and teaching. Demonstrated critical analysis through version control, manual and automatic testing, and reviewing peer work before Git pushes. </em></p>
+              <p><em>BCIT Computer Information Technology student who takes initiative and has high standards in his own work and in group work. I bring experience in leadership and enthusiastic communication to motivate my peers and create a strong chemistry to produce the best results. </em></p>
               <p>
               <ul>
                 <li>(778) 989-6449</li>
