updated resume with <embed>

--- a/index.html
+++ b/index.html
@@ -62,10 +62,12 @@
       <div class="section-title">
         <h2>Resume</h2>
         <p>Check My Resume</p>
-        <p><a href="https://drive.google.com/file/d/1HwOwFoBWw4ePsJ_FAQ0IpTMNVtWr8wh4/view?usp=sharing">Full PDF HERE</a></p>
+        <p><a href="https://drive.google.com/file/d/1tk-hAeeafcWfYdY1TiPYVd6NoMHHed6f/view?usp=sharing">PDF HERE</a></p>
       </div>
 
-      <div class="row">
+      <embed src="resume.pdf" type="application/pdf" style="min-height:100vh;width:100%">
+
+      <!-- <div class="row">
         <div class="col-lg-6">
           <h3 class="resume-title">Profile</h3>
           <div class="resume-item pb-0">
@@ -191,7 +193,7 @@
           </div>
           
         </div>
-      </div>
+      </div> -->
 
     </div>
   </section><!-- End Resume Section -->
