Replaced <embed> with <object>

--- a/index.html
+++ b/index.html
@@ -65,9 +65,11 @@
         <p><a href="https://drive.google.com/file/d/1tk-hAeeafcWfYdY1TiPYVd6NoMHHed6f/view?usp=sharing">PDF HERE</a></p>
       </div>
 
-      <embed src="resume.pdf" type="application/pdf" style="min-height:100vh;width:100%">
-
-      <!-- <div class="row">
+      <!-- <embed src="resume.pdf" type="application/pdf" style="min-height:100vh;width:100%"> -->
+      <object data="resume.pdf" type="application/pdf" style="min-height:100vh;width:100%">
+        <p>Whoops! Looks like your web browser doesn't have a PDF plugin. Instead, you can the above "PDF HERE" to download the PDF file.</a></p>
+      </object>
+      <!-- <div class="row"> 
         <div class="col-lg-6">
           <h3 class="resume-title">Profile</h3>
           <div class="resume-item pb-0">
