--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       </div>
 
       <!-- <embed src="resume.pdf" type="application/pdf" style="min-height:100vh;width:100%"> -->
-      <object data="resume.pdf" type="application/pdf" style="min-height:100vh;width:100%">
+      <object data="resume.pdf" type="application/pdf" style="min-height:100vh;width:100%;background-color:white">
         <p>Whoops! Looks like your web browser doesn't have a PDF plugin. Instead, you can the above "PDF HERE" to download the PDF file.</a></p>
       </object>
       <!-- <div class="row"> 
