--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <div class="section-title">
         <h2>Resume</h2>
         <p>Check My Resume</p>
-        <p><a href="https://drive.google.com/file/d/1tk-hAeeafcWfYdY1TiPYVd6NoMHHed6f/view?usp=sharing">PDF HERE</a></p>
+        <p><a href="https://drive.google.com/file/d/1tk-hAeeafcWfYdY1TiPYVd6NoMHHed6f/view?usp=sharing"><u>Download PDF</u></a></p>
       </div>
 
       <!-- <embed src="resume.pdf" type="application/pdf" style="min-height:100vh;width:100%"> -->
