--- a/index.html
+++ b/index.html
@@ -1,4 +1,20 @@
 <!DOCTYPE html>
+<!--
+  hey! youre a curious one arent ya?
+  it seems like youre wondering how i made this website.
+
+  Simply put: I used a bootstrap template and changed the index.html to use my text and images.
+  I also changed/added new .html files for pop ups when you look through my works and projects.
+  I then bought this domain and hosted it on netlify.
+  I could use a MEAN stack to make a dynamic website.
+  Or i could use Apache, IIS, Github pages, AWS... you name it.
+  But my focus was to put up a nice website as easy as possible.
+
+  I will update this website as my career grows. Enjoy your stay!
+
+  Check out jaguarsandbox.com for fun little things i've made in my free time :)
+  
+-->
 <html lang="en">
 
 <head>
