Updated resume and portfolio icons

--- a/index.html
+++ b/index.html
@@ -26,20 +26,9 @@
 
 </head>
 <!--
-  hey! youre a curious one arent ya?
-  it seems like youre wondering how i made this website.
+  inspect element is quite a handy tool.
 
-  Simply put: I used a bootstrap template and changed the index.html to use my text and images.
-  I also changed/added new .html files for pop ups when you look through my works and projects.
-  I then bought this domain and hosted it on netlify.
-  I could use a MEAN stack to make a dynamic website.
-  Or i could use Apache, IIS, Github pages, AWS... you name it.
-  But my focus was to put up a nice website as easy as possible.
-
-  I will update this website as my career grows. Enjoy your stay!
-
-  Check out jaguarsandbox.com for fun little things i've made in my free time :)
-  It's currently empty as of Nov. 26, 2020, unfortunately.
+  This website was last updated December 25, 2021. Happy Holidays!
   
 -->
 <body>
@@ -79,12 +68,12 @@
       <div class="section-title">
         <h2>Resume</h2>
         <p>Check My Resume</p>
-        <p><a href="https://drive.google.com/file/d/1HwOwFoBWw4ePsJ_FAQ0IpTMNVtWr8wh4/view?usp=sharing"><u>Download PDF</u></a></p>
+        <p><a href="https://drive.google.com/file/d/12iZFP8wdAwEcdwjVX4va9sTmDWf7FOry/view?usp=sharing"><u>Download PDF</u></a></p>
       </div>
 
       <!-- <embed src="resume.pdf" type="application/pdf" style="min-height:100vh;width:100%"> -->
       <object data="resume.pdf" type="application/pdf" style="min-height:100vh;width:100%;background-color:white">
-        <p>Whoops! Looks like your web browser doesn't have a PDF plugin. Instead, you can the above "PDF HERE" to download the PDF file.</a></p>
+        <p>Whoops! Looks like your web browser doesn't have a PDF plugin. Instead, you can click the above "Download PDF" to download the PDF file.</a></p>
       </object>
     </div>
   </section><!-- End Resume Section -->
@@ -114,9 +103,11 @@
             <div class="portfolio-info">
               <h4>Combo Swipe</h4>
               <p>Mobile Game</p>
+              <br>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/mobilegame.png" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/mobilegame.png" data-gall="portfolioGallery" class="venobox" title="App 1"><p>Zoom</p></a>
+                <span> || </span>
+                <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><p>Details</p></a>
               </div>
             </div>
           </div>
@@ -128,9 +119,11 @@
             <div class="portfolio-info">
               <h4>Outbreak: Source</h4>
               <p>Idle Web Game</p>
+              <br>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/outbreak.png" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details-outbreak.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/outbreak.png" data-gall="portfolioGallery" class="venobox" title="Web 3"><p>Zoom</p></a>
+                <span> || </span>
+                <a href="portfolio-details-outbreak.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><p>Details</p></a>
               </div>
             </div>
           </div>
@@ -142,9 +135,11 @@
             <div class="portfolio-info">
               <h4>HallPass</h4>
               <p>UX/UI Design</p>
+              <br>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/hallpassvert.jpg" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details-hallpass.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/hallpassvert.jpg" data-gall="portfolioGallery" class="venobox" title="Web 3"><p>Zoom</p></a>
+                <span> || </span>
+                <a href="portfolio-details-hallpass.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><p>Details</p></a>
               </div>
             </div>
           </div>
@@ -156,9 +151,11 @@
             <div class="portfolio-info">
               <h4>Simple Python MP3 Player</h4>
               <p>Python Application</p>
+              <br>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/pythonmp3.png" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details-pythonmp3.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/pythonmp3.png" data-gall="portfolioGallery" class="venobox" title="Web 3"><p>Zoom</p></a>
+                <span> || </span>
+                <a href="portfolio-details-pythonmp3.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><p>Details</p></a>
               </div>
             </div>
           </div>
@@ -170,9 +167,11 @@
             <div class="portfolio-info">
               <h4>Router Project</h4>
               <p>Networking</p>
+              <br>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/router2.png" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details-router.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/router2.png" data-gall="portfolioGallery" class="venobox" title="Web 3"><p>Zoom</p></a>
+                <span> || </span>
+                <a href="portfolio-details-router.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><p>Details</p></a>
               </div>
             </div>
           </div>
