cert icons, updated resume

--- a/index.html
+++ b/index.html
@@ -55,6 +55,13 @@
         <a href="https://www.linkedin.com/in/jaguar-perlas/" class="linkedin"><i class="icofont-linkedin"></i></a>
         <a href="https://github.com/jperlas2019" class="github"><i class="icofont-github"></i></a>
       </div>
+      
+      <div class="cert-icons">
+        <a href="https://www.credly.com/badges/228bf56d-d0d1-4041-871b-64645655f2a0"><img src="ccna_sm.jpg"></a>
+      </div>
+
+      
+
 
     </div>
   </header><!-- End Header -->
