--- a/pengu/details.html
+++ b/pengu/details.html
@@ -1,7 +1,7 @@
 <img src="pengu.jpg">
 
 <h1>PENGU Bot</h1>
-
+<h1>Prefix: `</h1>
 <p>===================</p>
 <h2>Music Commands</h2>
 <p>===================</p>
