Added patch notes link on details page

--- a/pengu/details.html
+++ b/pengu/details.html
@@ -2,6 +2,7 @@
 
 <h1>PENGU Bot</h1>
 <h1>Prefix: `</h1>
+<h2><a href="https://jaguarperlas.com/pengu/patch_notes.html">Patch Notes</a></h2>
 <p>===================</p>
 <h2>Music Commands</h2>
 <p>===================</p>
