Added vine sound effects

--- a/pengu/details.html
+++ b/pengu/details.html
@@ -114,6 +114,18 @@
     <li>ace</li>
 </ul>
 
+<h3>vine</h3>
+<p>Plays sound effects from Vine</p>
+<ul>
+    <li>
+        boom
+    </li>
+    <li>
+        bruh
+    </li>
+</ul>
+
+
 <h3>warzone</h3>
 <p>Plays sound effects from Call of Duty: Warzone</p>
 <ul>
