--- a/pengu/patch_notes.html
+++ b/pengu/patch_notes.html
@@ -3,6 +3,25 @@
 <h1>PENGU Bot</h1>
 <h1>Prefix: `</h1>
 
+
+<p>===================</p>
+<h2>Patch 1.1.1 - Jan 20, 2021</h2>
+<p>===================</p>
+<ul>
+    <li>
+        Added 2 new sound effects from Vine
+        <ul>
+            <li>
+                vine boom
+            </li>
+            <li>
+                vine bruh
+            </li>
+        </ul>
+    </li>
+</ul>
+
+
 <p>===================</p>
 <h2>Patch 1.1 - Jan 20, 2021</h2>
 <p>===================</p>
