--- a/pengu/patch_notes.html
+++ b/pengu/patch_notes.html
@@ -3,6 +3,23 @@
 <h1>PENGU Bot</h1>
 <h1>Prefix: `</h1>
 
+<p>===================</p>
+<h2>Patch 1.1.2 - Jan 23, 2021</h2>
+<p>===================</p>
+<ul>
+    <li>
+        PENGU can now play age-restricted audio from Youtube
+    </li>
+    <li>
+        Added more feedback messages
+    </li>
+    <li>
+        PENGU will automatically skip to next song in queue if something goes wrong
+    </li>
+    <li>
+        Updated PENGU cookies
+    </li>
+</ul>
 
 <p>===================</p>
 <h2>Patch 1.1.1 - Jan 20, 2021</h2>
