--- a/pengu/patch_notes.html
+++ b/pengu/patch_notes.html
@@ -11,7 +11,7 @@
         PENGU can now play age-restricted audio from Youtube
     </li>
     <li>
-        Added more feedback messages
+        Added error handling and feedback messages for youtube-dl
     </li>
     <li>
         PENGU will automatically skip to next song in queue if something goes wrong
