--- a/pengu/patch_notes.html
+++ b/pengu/patch_notes.html
@@ -21,6 +21,19 @@
     </li>
 </ul>
 
+<h3> To do for next patch: </h3>
+<ul>
+    <li>
+        Automatic restart if PENGU dies
+    </li>
+    <li>
+        More sound effects
+    </li>
+    <li>
+        Soundcloud support
+    </li>
+</ul>
+
 <p>===================</p>
 <h2>Patch 1.1.1 - Jan 20, 2021</h2>
 <p>===================</p>
