--- a/pengu/patch_notes.html
+++ b/pengu/patch_notes.html
@@ -32,6 +32,9 @@
     <li>
         Soundcloud support
     </li>
+    <li>
+        Ability to send a message to all joined servers
+    </li>
 </ul>
 
 <p>===================</p>
