--- a/pengu/patch_notes.html
+++ b/pengu/patch_notes.html
@@ -4,6 +4,27 @@
 <h1>Prefix: `</h1>
 
 <p>===================</p>
+<h2>Patch 1.2 - Jan 27, 2021</h2>
+<p>===================</p>
+<ul>
+    <li>
+        Added playnow, putting a song first in queue
+    </li>
+    <li>
+        Added shuffle, shuffling entire queue
+    </li>
+    <li>
+        Added fart, playing from 4 different fart sounds
+    </li>
+    <li>
+        Forgot to enable error handling for play command
+    </li>
+    <li>
+        Added a function for sending messages, cutting down lines of code
+    </li>
+</ul>
+
+<p>===================</p>
 <h2>Patch 1.1.2 - Jan 23, 2021</h2>
 <p>===================</p>
 <ul>
