Patch notes, details

--- a/pengu/details.html
+++ b/pengu/details.html
@@ -13,6 +13,13 @@
 <h3>p</h3>
 <p>Alias for <i>play</i></p>
 
+<h3>playnow</h3>
+<p>Adds song in front of queue</p>
+<i>Playlists not supported</i>
+
+<h3>pn</h3>
+<p>Alias for playnow</p>
+
 <h3>queue</h3>
 <p>Shows current music queue.</p>
 <i>Attemping to play a song while a song is already playing will automatically put attempted song in queue.</i>
@@ -55,6 +62,9 @@
     <li>taunt</li>
     <li>start</li>
 </ul>
+
+<h3>fart</h3>
+<o>Plays from 4 different fart sounds, randomly</o>
 
 <h3>fortnite</h3>
 <p>Plays sound effects from Fortnite.</p>
