--- a/pengu/patch_notes.html
+++ b/pengu/patch_notes.html
@@ -22,6 +22,9 @@
     <li>
         Added a function for sending messages, cutting down lines of code
     </li>
+    <li>
+        Queue command now shows first 5 songs up next
+    </li>
 </ul>
 
 <p>===================</p>
@@ -39,22 +42,6 @@
     </li>
     <li>
         Updated PENGU cookies
-    </li>
-</ul>
-
-<h3> To do for next patch: </h3>
-<ul>
-    <li>
-        Automatic restart if PENGU dies
-    </li>
-    <li>
-        More sound effects
-    </li>
-    <li>
-        Soundcloud support
-    </li>
-    <li>
-        Ability to send a message to all joined servers
     </li>
 </ul>
 
