Added shuffle description

--- a/pengu/details.html
+++ b/pengu/details.html
@@ -24,6 +24,9 @@
 <p>Shows current music queue.</p>
 <i>Attemping to play a song while a song is already playing will automatically put attempted song in queue.</i>
 
+<h3>shuffle</h3>
+<p>Randomizes the entire queue</p>
+
 <h3>skip</h3>
 <p>Skips current song, plays next song in queue.</p>
 
