Added clear description

--- a/pengu/details.html
+++ b/pengu/details.html
@@ -6,6 +6,10 @@
 <p>===================</p>
 <h2>Music Commands</h2>
 <p>===================</p>
+
+<h3>clear</h3>
+<p>Clears the queue</p>
+
 <h3>play</h3>
 <p>Plays music via Youtube links, Spotify, and direct search. Supports Spotify tracks, albums, and public playlists.</p>
 <p><i>Does NOT play directly from Spotify. It grabs song name and artist and searches on Youtube.</i></p>
