Added donation link

--- a/pengu/details.html
+++ b/pengu/details.html
@@ -3,6 +3,8 @@
 <h1>PENGU Bot</h1>
 <h1>Prefix: `</h1>
 <h2><a href="https://jaguarperlas.com/pengu/patch_notes.html">Patch Notes</a></h2>
+
+<h2>Enjoying PENGU? Consider making a <a href="https://www.paypal.com/donate/?hosted_button_id=FLS45QV8QPD72"> donation!</a></h2>
 <p>===================</p>
 <h2>Music Commands</h2>
 <p>===================</p>
