--- a/pengu/details.html
+++ b/pengu/details.html
@@ -1,5 +1,12 @@
 <img src="pengu.jpg">
 
+<style>
+html *
+{
+    font-family:Arial
+}
+</style>
+
 <h1>PENGU Bot</h1>
 <h1>Prefix: `</h1>
 <h2><a href="https://jaguarperlas.com/pengu/patch_notes.html">Patch Notes</a></h2>
