--- a/pengu/patch_notes.html
+++ b/pengu/patch_notes.html
@@ -4,6 +4,18 @@
 <h1>Prefix: `</h1>
 
 <p>===================</p>
+<h2>Patch 1.2.1 - Jan 28, 2021</h2>
+<p>===================</p>
+<ul>
+    <li>
+        Added options "force-IPv4:True" and "cachedir:False" to YTDL to tackle HTTP 403 Forbidden error
+    </li>
+    <li>
+        Removed VC global variable
+    </li>
+</ul>
+
+<p>===================</p>
 <h2>Patch 1.2 - Jan 27, 2021</h2>
 <p>===================</p>
 <ul>
