--- a/pengu/patch_notes.html
+++ b/pengu/patch_notes.html
@@ -1,5 +1,12 @@
 <img src="pengu.jpg">
 
+<style>
+    html *
+    {
+        font-family:Arial
+    }
+    </style>
+
 <h1>PENGU Bot</h1>
 <h1>Prefix: `</h1>
 
