--- a/pengu/patch_notes.html
+++ b/pengu/patch_notes.html
@@ -11,6 +11,21 @@
 <h1>Prefix: `</h1>
 
 <p>===================</p>
+<h2>Patch 1.2.2 - Feb 11, 2021</h2>
+<p>===================</p>
+<ul>
+    <li>
+        PENGU will now auto server-deafen itself.
+        <ul>
+            <li>
+                <i>To help enforce privacy concerns and save bandwidth.</i>
+            </li>
+        </ul>
+    </li>
+</ul>
+
+
+<p>===================</p>
 <h2>Patch 1.2.1 - Jan 28, 2021</h2>
 <p>===================</p>
 <ul>
