--- a/pengu/patch_notes.html
+++ b/pengu/patch_notes.html
@@ -11,6 +11,49 @@
 <h1>Prefix: `</h1>
 
 <p>===================</p>
+<h2>Patch 1.3 - Feb 25, 2021</h2>
+<p>===================</p>
+<ul>
+    <li>
+        Added loop functionality
+        <ul>
+            <li>
+                <i>loop</i> || To turn on looping
+            </li>
+            <li>
+                <i>loopoff</i> || To turn off looping
+            </li>
+        </ul>
+    </li>
+    <li>
+        Added Now Playing functionality
+        <ul>
+            <li>
+                <i>nowplaying</i>
+            </li>
+            <li>
+                <i>np</i> || Alias
+            </li>
+        </ul>
+    </li>
+    <li>
+        Added aliases to common commands
+        <ul>
+            <li>
+                <i>q</i> || Alias for queue
+            </li>
+            <li>
+                <i>leave</i> || Alias for disconnect
+            </li>
+            <li>
+                <i>s</i> || Alias for skip
+            </li>
+        </ul>
+    </li>
+</ul>
+
+
+<p>===================</p>
 <h2>Patch 1.2.2 - Feb 11, 2021</h2>
 <p>===================</p>
 <ul>
