--- a/pengu/details.html
+++ b/pengu/details.html
@@ -19,6 +19,18 @@ html *
 <h3>clear</h3>
 <p>Clears the queue</p>
 
+<h3>loop</h3>
+<p>Loops the currently playing song</p>
+
+<h3>loopoff</h3>
+<p>Turns off looping</p>
+
+<h3>nowplaying</h3>
+<p>Shows currently playing song</p>
+
+<h3>np</h3>
+<p>Alias for <i>nowplaying</i></p>
+
 <h3>play</h3>
 <p>Plays music via Youtube links, Spotify, and direct search. Supports Spotify tracks, albums, and public playlists.</p>
 <p><i>Does NOT play directly from Spotify. It grabs song name and artist and searches on Youtube.</i></p>
@@ -31,17 +43,23 @@ html *
 <i>Playlists not supported</i>
 
 <h3>pn</h3>
-<p>Alias for playnow</p>
+<p>Alias for <i>playnow</i></p>
 
 <h3>queue</h3>
 <p>Shows current music queue.</p>
 <i>Attemping to play a song while a song is already playing will automatically put attempted song in queue.</i>
+
+<h3>q</h3>
+<p>Alias for <i>queue</i></p>
 
 <h3>shuffle</h3>
 <p>Randomizes the entire queue</p>
 
 <h3>skip</h3>
 <p>Skips current song, plays next song in queue.</p>
+
+<h3>s</h3>
+<p>Alias for <i>skip</i></p>
 
 <h3>stop</h3>
 <p>Stops current song.</p>
@@ -55,6 +73,9 @@ html *
 
 <h3>disconnect</h3>
 <p>Throw him out.</p>
+
+<h3>leave</h3>
+<p>Alias for <i>disconnect</i></p>
 
 <h3>debug</h3>
 <p>Tells the secrets of PENGU</p>
