--- a/portfolio-details-hallpass.html
+++ b/portfolio-details-hallpass.html
@@ -51,7 +51,7 @@
               <li><strong>Category</strong>: UX/UI Design</li>
               <li><strong>Purpose</strong>: BCIT UX/UI Design Course</li>
               <li><strong>Project date</strong>: May 2020</li>
-              <li><strong>Project URL</strong>: <a href="https://www.figma.com/proto/RJ5UcWjVAWLi2b6fQDyxfB/User-Flows?node-id=6%3A192&scaling=min-zoom">See the design</a></li>
+              <li><strong>Project URL</strong>: <a href="https://www.figma.com/proto/RJ5UcWjVAWLi2b6fQDyxfB/User-Flows?node-id=6%3A192&scaling=min-zoom" target="_blank">See the design</a></li>
             </ul>
 
             <p>
