--- a/portfolio-details-pythonmp3.html
+++ b/portfolio-details-pythonmp3.html
@@ -52,7 +52,7 @@
               <li><strong>Category</strong>: Python Application</li>
               <li><strong>Purpose</strong>: BCIT Object-Oriented Programming Course</li>
               <li><strong>Project date</strong>: Mar - Apr 2020</li>
-              <li><strong>Project URL</strong>: <a href="https://github.com/jperlas2019/Python-MP3-Player">Github link</a></li>
+              <li><strong>Project URL</strong>: <a href="https://github.com/jperlas2019/Python-MP3-Player" target="_blank">Github link</a></li>
             </ul>
 
             <p>
