--- a/portfolio-details-router.html
+++ b/portfolio-details-router.html
@@ -48,7 +48,7 @@
             <h3>Project information</h3>
             <ul>
               <li><strong>Category</strong>: Router Project</li>
-              <li><strong>Purpose</strong>: BCIT Netoworking Course</li>
+              <li><strong>Purpose</strong>: BCIT Networking Course</li>
               <li><strong>Project date</strong>: Feb - Apr 2020</li>
               <li><strong>Project URL</strong>: <a href="#">N/A</a></li>
             </ul>
