--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Jaguar Perlas</title>
+  <title>JAGUAR PERLAS</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
@@ -28,7 +28,7 @@
 <!--
   inspect element is quite a handy tool.
 
-  This website was last updated December 25, 2021. Happy Holidays!
+  This website was last updated March 20, 2022. About to graduate soon!
   
 -->
 <body>
@@ -37,9 +37,11 @@
   <header id="header" class="header-tops">
     <div class="container">
 
-      <h1><a href="index.html">Jaguar Perlas</a></h1>
+      <h1><a href="index.html">Jaguar Perlas.</a></h1>
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
-      <h2><span>Computer Information Technology</span> Student from BCIT.</h2>
+      
+      <!-- <h2><span>Computer Information Technology</span> Student from BCIT.</h2> -->
+      <h2><span class="typed" data-typed-items="CIT Student from BCIT., System Administrator., Developer., Aspiring Ethical Hacker."></span></h2>
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
@@ -75,7 +77,7 @@
       <div class="section-title">
         <h2>Resume</h2>
         <p>Check My Resume</p>
-        <p><a href="https://drive.google.com/file/d/12iZFP8wdAwEcdwjVX4va9sTmDWf7FOry/view?usp=sharing"><u>Download PDF</u></a></p>
+        <p><a href="https://drive.google.com/file/d/1tk-hAeeafcWfYdY1TiPYVd6NoMHHed6f/view?usp=sharing"><u>Download PDF</u></a></p>
       </div>
 
       <!-- <embed src="resume.pdf" type="application/pdf" style="min-height:100vh;width:100%"> -->
@@ -104,6 +106,54 @@
 
       <div class="row portfolio-container">
 
+        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/pengu.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>PENGU - Discord Bot</h4>
+              <p>Python Application</p>
+              <br>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/pengu.png" data-gall="portfolioGallery" class="venobox" title="Web 3"><p>Zoom</p></a>
+                <span> || </span>
+                <a href="portfolio-details-PENGU.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><p>Details</p></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/ansible.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Ansible AWS Automation</h4>
+              <p>Infrastructure Automation</p>
+              <br>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/ansible.png" data-gall="portfolioGallery" class="venobox" title="Web 3"><p>Zoom</p></a>
+                <span> || </span>
+                <a href="portfolio-details-ansible.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><p>Details</p></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/docker1.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Docker Video Streaming Application</h4>
+              <p>Docker</p>
+              <br>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/docker1.png" data-gall="portfolioGallery" class="venobox" title="Web 3"><p>Zoom</p></a>
+                <span> || </span>
+                <a href="portfolio-details-dockervideo.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><p>Details</p></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/mobilegame.png" class="img-fluid" alt="">
@@ -115,6 +165,22 @@
                 <a href="assets/img/portfolio/mobilegame.png" data-gall="portfolioGallery" class="venobox" title="App 1"><p>Zoom</p></a>
                 <span> || </span>
                 <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><p>Details</p></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/smartroster.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Smart Roster</h4>
+              <p>Industry Project</p>
+              <br>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/smartroster.png" data-gall="portfolioGallery" class="venobox" title="Web 3"><p>Zoom</p></a>
+                <span> || </span>
+                <a href="portfolio-details-smartroster.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><p>Details</p></a>
               </div>
             </div>
           </div>
@@ -199,6 +265,7 @@
   <script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="assets/vendor/venobox/venobox.min.js"></script>
+  <script src="assets/vendor/typed.js/typed.min.js"></script>
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
