--- a/portfolio-details-outbreak.html
+++ b/portfolio-details-outbreak.html
@@ -51,7 +51,7 @@
               <li><strong>Category</strong>: Web Game</li>
               <li><strong>Purpose</strong>: BCIT Agile Methodology Course</li>
               <li><strong>Project date</strong>: May 2020</li>
-              <li><strong>Project URL</strong>: <a href="http://outbreaksource.herokuapp.com">outbreaksource.herokuapp.com</a></li>
+              <li><strong>Project URL</strong>: <a href="http://outbreaksource.herokuapp.com" target="_blank">outbreaksource.herokuapp.com</a></li>
             </ul>
 
             <p>
