--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <!--
   inspect element is quite a handy tool.
 
-  This website was last updated March 20, 2022. About to graduate soon!
+  This website was last updated April 8, 2022. About to graduate soon!
   
 -->
 <body>
@@ -133,6 +133,22 @@
                 <a href="assets/img/portfolio/ansible.png" data-gall="portfolioGallery" class="venobox" title="Web 3"><p>Zoom</p></a>
                 <span> || </span>
                 <a href="portfolio-details-ansible.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><p>Details</p></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/docker1.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Kubernetes Video Streaming Application</h4>
+              <p>Kubernetes</p>
+              <br>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/kubernetes1.png" data-gall="portfolioGallery" class="venobox" title="Web 3"><p>Zoom</p></a>
+                <span> || </span>
+                <a href="portfolio-details-kubernetesvideo.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><p>Details</p></a>
               </div>
             </div>
           </div>
