--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
               <p>Kubernetes</p>
               <br>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/kubernetes1.png" data-gall="portfolioGallery" class="venobox" title="Web 3"><p>Zoom</p></a>
+                <a href="assets/img/portfolio/kubernetes1.jpg" data-gall="portfolioGallery" class="venobox" title="Web 3"><p>Zoom</p></a>
                 <span> || </span>
                 <a href="portfolio-details-kubernetesvideo.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><p>Details</p></a>
               </div>
