--- a/portfolio-details-kubernetesvideo.html
+++ b/portfolio-details-kubernetesvideo.html
@@ -43,7 +43,7 @@
               <video width="100%" autoplay loop>
                 <source src="assets/img/portfolio/dockervideostream.mp4" type="video/mp4">
               </video>
-              <img src="assets/img/portfolio/kubernetes1.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/kubernetes1.jpg" class="img-fluid" alt="">
             </div>
           </div>
 
