actually fixed image

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/docker1.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/kubernetes1.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Kubernetes Video Streaming Application</h4>
               <p>Kubernetes</p>
