--- a/index.html
+++ b/index.html
@@ -124,6 +124,22 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/jenkins.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>CI/CD Jenkins Pipeline</h4>
+              <p>DevOps</p>
+              <br>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/jenkins.png" data-gall="portfolioGallery" class="venobox" title="Web 3"><p>Zoom</p></a>
+                <span> || </span>
+                <a href="portfolio-details-jenkins.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><p>Details</p></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="portfolio-wrap">
             <img src="assets/img/portfolio/ansible.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Ansible AWS Automation</h4>
